# PSU_SetCourseWork

./: CMakeLists.txt  MeasureTime.h  Set.h  SetUsingSinglyLinkedList.cpp  SetUsingSinglyLinkedList.h  TestSet.h  main.cpp
readme/: console.txt  console_formatted.md
std_implementations/: SetUsingStdForwardList.cpp  SetUsingStdForwardList.h  SetUsingStdList.cpp  SetUsingStdList.h  SetUsingStdSet.cpp  SetUsingStdSet.h  SetUsingStdUnorderedMultimap.cpp  SetUsingStdUnorderedMultimap.h
util/: centered.h
